# dark-factory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  approved.md  dark_factory.db  feedback.md  pyproject.toml  tasks.json
.github/workflows/: auto-version.yml  ci.yml  release.yml
dashboard/frontend/: Makefile  contracts.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/frontend/src/: main.tsx
dashboard/frontend/src/api/: client.ts
dashboard/frontend/src/components/: AgentCards.tsx  App.tsx  Header.tsx  JobHistory.tsx  LiveLog.tsx  TaskProgress.tsx  TimeEstimate.tsx
dashboard/frontend/src/hooks/: usePolling.ts
dashboard/frontend/src/types/: index.ts
diagrams/: pdf-theme.css
factory/: __init__.py  cli.py  github_client.py  guardrails.py  orchestrator.py  project.py  security.py  standards.py  state.py
factory/agents/: __init__.py  arbiter.py  base.py  conflict_resolver.py  evaluator.py  generator.py  planner.py
factory/dashboard/: __init__.py  app.py  db.py  emitter.py  models.py
factory/dashboard/routers/: events.py  jobs.py
factory/pipeline/: __init__.py  engine.py  job_runtime.py  runner.py  schema.py
factory/pipeline/handlers/: __init__.py  agent.py  df_job.py  loop.py  parallel.py  shell.py  skill.py  stages.py  subpipeline.py
factory/prompts/: _principles.md  arbiter.md  conflict_resolver.md  evaluator.md  generator.md  planner.md
factory/skills/: __init__.py  base.py  cleanup.py  codebase_profile.py  context_validator.py  dead_code_sweep.py  debug_bisect.py  dependency_audit.py  doc_sync.py  health_check.py  migration_chain.py  pr_polish.py  registry.py  rollback.py  scaffold.py  standards_bootstrap.py  version_bump.py
factory/templates/: __init__.py
factory/templates/fastapi/: .env.example  .gitignore  Dockerfile  Makefile  STYLEGUIDE.md  docker-compose.yml  main.py  pyproject.toml
factory/templates/fastapi/.github/workflows/: ci.yml
factory/templates/fastapi/app/: config.py  db.py  deps.py  events.py  models.py  schemas.py
factory/templates/fastapi/app/repositories/: items.py  jobs.py
factory/templates/fastapi/app/routers/: items.py  jobs.py
factory/templates/fastapi/app/services/: item_service.py  job_runner.py
factory/templates/fastapi/src/: __init__.py  config.py  main.py  routes.py
factory/templates/fastapi/tests/: conftest.py  test_health.py  test_item_repository.py  test_items_router.py
factory/templates/fullstack/: .env.example  .gitignore  Makefile  STYLEGUIDE.md  docker-compose.yml
factory/templates/fullstack/.github/workflows/: ci.yml
factory/templates/fullstack/backend/: pyproject.toml
factory/templates/fullstack/backend/src/: config.py  main.py
factory/templates/fullstack/frontend/: Dockerfile  package.json
factory/templates/fullstack/frontend/src/: App.tsx  index.css
factory/templates/react/: CONVENTIONS.md  STYLEGUIDE.md
factory/templates/react/.github/workflows/: ci.yml
factory/templates/terraform/: .gitignore  CONVENTIONS.md  Makefile  backend.tf  main.tf  outputs.tf  variables.tf
factory/templates/terraform/environments/production/: terraform.tfvars
factory/templates/terraform/environments/staging/: terraform.tfvars
pipelines/: compose_demo.yaml  demo.yaml  df_job.yaml  sub_a.yaml  sub_b.yaml
scripts/: auto_version.py
tests/: conftest.py  test_agents.py  test_conflict_resolver.py  test_dashboard_integration.py  test_emitter.py  test_github_client.py  test_orchestrator.py  test_security.py  test_skills.py  test_state.py
tests/pipeline/: test_composite_handlers.py  test_df_job.py  test_engine.py  test_schema.py  test_stage_handlers.py
tests/test_dashboard/: test_dashboard_integration.py  test_events.py  test_frontend_scaffold.py  test_jobs.py  test_scaffold.py  test_ui_components.py
